--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
